/*
  Train Proto
  駅に停車している列車の情報を扱うためのプロトコル
*/

syntax = "proto3";

package train.v1;

import "google/protobuf/timestamp.proto";

message Train {
  string nfc_uuid = 1;
  string station_id = 2;
  google.protobuf.Timestamp arrival_time = 3;
}

message NotifyTrainArrivalRequest {
  Train train = 1;
}

message NotifyTrainArrivalResponse {
}

service TrainSerice{
  rpc NotifyTrainArrival(NotifyTrainArrivalRequest) returns (NotifyTrainArrivalResponse) {}
}

